# ExpireEye-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
app/: dependencies.py  main.py
app/core/: __init__.py
app/db/: session.py
app/models/: __init__.py  notification.py  notification_model.py  nutrition.py  nutrition_model.py  product.py  product_model.py  scanlog.py  user.py  user_model.py  user_product.py
app/routers/: auth.py  detection.py  notification_router.py  product.py  stats.py  user.py  user_inventory.py  warehouse.py
app/schemas/: product.py  product_schema.py  stats_schema.py
app/services/: notification_service.py  product_service.py  user_product_service.py  yolo_service.py
app/utils/: jwt.py  nutrition_utils.py  product_utils.py
backend/: README.md
backend/alembic/versions/: 90df5e248de3_initial_migration.py
backend/app/: main.py
backend/app/models/: product.py  scanlog.py  user.py
backend/app/routes/: auth.py  product.py
backend/app/schemas/: __init__.py  auth.py  product.py
backend/app/utils/: errors.py
frontend/: README.md
frontend/src/: App.jsx
